--- a/package.json
+++ b/package.json
@@ -1,21 +1,28 @@
 {
   "name": "estore_backend",
   "version": "1.0.0",
-  "type": "module",
+  
   "description": "",
-  "main": "app.ts",
+  "main": "dist/app.js",
   "scripts": {
+    "start": "nodemon ./dist/app",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "tsc -w"
+
+ 
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/cookie-parser": "^1.4.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/mongoose": "^5.11.97",
+    "@types/morgan": "^1.9.4",
     "@types/node": "^20.4.1",
     "joi-objectid": "^4.0.2",
     "nodemon": "^3.0.1",
@@ -26,6 +33,8 @@
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "joi": "^17.9.2",
